sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:4: error: ')' expected but ';' found.
                    {test=true; for (i<-0 to (x-1-count)) {if (isSmaller(i, (i-1)) {swap(i, (i-1)); test=false}; if (isSmaller((x-i-2+count), (x-i-2+count))) {swap((x-i-1+count), (x-i-2+count)); test=false}}; count=count+1}
                                                                                                               ^